memory_prof: Add memory profiling and sanity tests
Add tests to perform profiling and basic sanity checks on Ion and
other generic memory code.

Change-Id: I67f1837606a4b203d030189d0fe9c387ac130a49

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,9 @@ if KERNELMODULES
 if USEION
 BUILD_TEST += ion
 endif
+if USEMEMORY_PROF
+BUILD_TEST += memory_prof
+endif
 if USEMSM_BUS
 BUILD_TEST += msm_bus
 endif
