--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,9 @@ AM_CONDITIONAL(KERNELMODULES, [test -n "${with_kernel}"])
 # ion
 ENABLE_KERNEL_TEST([ion],[include the ion test (default=yes)])
 
+# memory_prof
+ENABLE_KERNEL_TEST([memory_prof],[include the memory profiling test (default=yes)])
+
 # msm-bus
 ENABLE_KERNEL_TEST([msm-bus],[include the MSM bus test (default=yes)])
 
@@ -83,6 +86,7 @@ AC_SUBST([CC])
 AC_CONFIG_FILES([
 	Makefile
 	ion/Makefile
+	memory_prof/Makefile
 	msm_bus/Makefile
 	ocmem/Makefile
 	sps/Makefile
